[bdist_wheel]
universal = 1

[metadata]
name = nativeconfig
author = Ilya Kulakov
author_email = kulakov.ilya@gmail.com
url = https://github.com/GreatFruitOmsk/nativeconfig
description = Cross-platform python module to store application config via native subsystems such as Windows Registry or NSUserDefaults.
license = MIT License
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
platforms = any
long_description = file: README.rst
